crates/glyim-cli/tests/snapshots/ui__assign_to_immutable_pattern.snap
---
source: crates/glyim-cli/tests/ui.rs
assertion_line: 57
expression: actual
---
  × cannot assign to immutable binding
   ╭─[tests/ui/assign_to_immutable_pattern.g:1:1]
 1 │ fn main() { let x = 5; x = 10; x }
   · ▲
   · ╰── cannot assign to immutable binding
   ╰────
