crates/glyim-cli/tests/snapshots/ui__bool_mismatch.snap
---
source: crates/glyim-cli/tests/ui.rs
assertion_line: 46
expression: actual
---
[31mError:[0m expected = but found : at bytes 20..21
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m tests/ui/bool_mismatch.g:1:21 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249mm[0m[38;5;249ma[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m([0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mx[0m:[38;5;249m [0m[38;5;249mb[0m[38;5;249mo[0m[38;5;249mo[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m4[0m[38;5;249m2[0m[38;5;249m;[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m}[0m
 [38;5;240m  │[0m                     ┬  
 [38;5;240m  │[0m                     ╰── expected = but found : at bytes 20..21
[38;5;246m───╯[0m
[31mError:[0m expected expression but found : at bytes 20..21
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m tests/ui/bool_mismatch.g:1:21 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249mm[0m[38;5;249ma[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m([0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mx[0m:[38;5;249m [0m[38;5;249mb[0m[38;5;249mo[0m[38;5;249mo[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m4[0m[38;5;249m2[0m[38;5;249m;[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m}[0m
 [38;5;240m  │[0m                     ┬  
 [38;5;240m  │[0m                     ╰── expected expression but found : at bytes 20..21
[38;5;246m───╯[0m
