crates/glyim-cli/tests/snapshots/ui__deref_non_pointer.snap
---
source: crates/glyim-cli/tests/ui.rs
expression: actual
---
  × cannot dereference non-pointer type `Int`
   ╭─[tests/ui/deref_non_pointer.g:1:1]
 1 │ main = () => { let x = 42; *x }
   · ▲
   · ╰── cannot dereference non-pointer type `Int`
   ╰────
