crates/glyim-cli/tests/snapshots/ui__empty_source.snap
---
source: crates/glyim-cli/tests/ui.rs
assertion_line: 34
expression: actual
---
error: no 'main' function
