crates/glyim-cli/tests/snapshots/ui__invalid_question.snap
---
source: crates/glyim-cli/tests/ui.rs
expression: actual
---
  × unresolved name: Symbol(3)
   ╭─[tests/ui/invalid_question.g:1:1]
 1 │ main = () => { let x = 42?; x }
   · ▲
   · ╰── unresolved name: Symbol(3)
   ╰────
