crates/glyim-cli/tests/snapshots/ui__missing_closing_brace.snap
---
source: crates/glyim-cli/tests/ui.rs
assertion_line: 34
expression: actual
---
[31mError:[0m expected } but reached end of input
