crates/glyim-cli/tests/snapshots/ui__missing_comma_in_params.snap
---
source: crates/glyim-cli/tests/ui.rs
assertion_line: 34
expression: actual
---
error: missing param
